force-app/main/default/objects/OutofOffice_Confirmation_Dialog__e/OutofOffice_Confirmation_Dialog__e.object-meta.xml
<CustomObject>
    <label>OutofOffice_Confirmation_Dialog</label>
    <pluralLabel>OutOfOffice PopUps</pluralLabel>
</CustomObject>