force-app/main/default/objects/OutofOffice_Confirmation_Dialog__e/fields/AssignedToUser_ID__c.field-meta.xml
<CustomField>
    <fullName>AssignedToUser_ID__c</fullName>
    <label>AssignedToUser_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>