force-app/main/default/objects/OutofOffice_Confirmation_Dialog__e/fields/Out_Of_Office_MSG__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Office_MSG__c</fullName>
    <label>Out Of Office MSG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>