force-app/main/default/objects/OutofOffice_Confirmation_Dialog__e/fields/TaskId__c.field-meta.xml
<CustomField>
    <fullName>TaskId__c</fullName>
    <label>TaskId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>